# man_pages_viewer

./: README-es.md  README.md
manls/: manls  pyproject.toml
manls/src/manls/: __main__.py  parser.py  tui.py
